# Projet-Moteur-de-jeux

./: CMakeLists.txt  README.md
Structures/: Glace.txt  House_1.txt  Pillone.txt  Sapin.txt  Tree.txt  Tree_2.txt  Tree_3.txt  arche.txt  cactus_amas.txt  cactus_simple_1.txt  cactus_simple_2.txt
Textures/: atlas.xcf
Textures/Blocks/: atlas.xcf  atlas_no_bleeding.xcf
Textures/Entity/: entity.xcf  zombie_plan.xcf
Textures/HUD/: hud.xcf
generation/: generation.cpp
include/: Agent.hpp  Chunk.hpp  Entity.hpp  Headers.hpp  Hitbox.hpp  Hud.hpp  MapGenerator.hpp  ParamsWindow.hpp  Personnage.hpp  Player.hpp  Shader.hpp  Skybox.hpp  Sound.hpp  TerrainControler.hpp  Texture.h  Transform.hpp  Voxel.hpp  Window.hpp  Zombie.hpp  variables.h
shaders/: default_fragment.frag  entity_frag.frag  entity_vertex.vert  fragmentShader.frag  hud_frag.frag  hud_vertex.vert  skybox_fragment.frag  skybox_vertex.vert  vertexShader.vert
src/: Agent.cpp  Chunk.cpp  Entity.cpp  Hitbox.cpp  Hud.cpp  MapGenerator.cpp  ParamsWindow.cpp  Personnage.cpp  Player.cpp  Shader.cpp  Skybox.cpp  Sound.cpp  TerrainControler.cpp  Texture.cpp  Transform.cpp  Voxel.cpp  Window.cpp  Zombie.cpp  main.cpp  stb_image.cpp  stb_image_write.cpp
